[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/settings/SettingsScreen.gd" type="Script" id=1]
[ext_resource path="res://resources/RedButtonCornerStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://resources/VictoryScreen/VictoryTextFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/ChallengeRuleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://objects/ui/ToggleButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/settings/GuardSpeed.gd" type="Script" id=6]
[ext_resource path="res://scenes/settings/RangeControl.gd" type="Script" id=7]
[ext_resource path="res://resources/guard-speed-gui/GuardSpeedButtonLeft.tres" type="StyleBox" id=8]
[ext_resource path="res://resources/guard-speed-gui/GuardSpeedButtonLeftPressed.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/ui/left-btn-icon.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/left-btn-speed-pressed.png" type="Texture" id=11]
[ext_resource path="res://resources/ButtonFont.tres" type="DynamicFont" id=12]
[ext_resource path="res://resources/guard-speed-gui/GuardSpeedButtonRight.tres" type="StyleBox" id=13]
[ext_resource path="res://resources/guard-speed-gui/GuardSpeedButtonRightPressed.tres" type="StyleBox" id=14]
[ext_resource path="res://assets/ui/right-btn-icon.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/right-btn-icon-pressed.png" type="Texture" id=16]
[ext_resource path="res://objects/ui/Button.tscn" type="PackedScene" id=17]
[ext_resource path="res://objects/shaders/GrayScaleShader.tscn" type="PackedScene" id=18]
[ext_resource path="res://resources/Button/Pressed.tres" type="StyleBox" id=19]
[ext_resource path="res://assets/fonts/Dosis/Dosis-Medium.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://scenes/hints/HintsLayer.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/hints/HintButtonsManager.tscn" type="PackedScene" id=22]
[ext_resource path="res://scenes/themes/main_theme.theme" type="Theme" id=23]

[sub_resource type="DynamicFont" id=1]
size = 42
use_filter = true
font_data = ExtResource( 20 )

[node name="SettingsScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.976471, 0.968627, 0.972549, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="YouAreYou" type="Label" parent="Container"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -465.5
margin_bottom = -394.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "YOU ARE YOU."
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.0
margin_top = -306.0
margin_right = 313.0
margin_bottom = -34.0
custom_constants/separation = 14
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sound" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_right = 626.0
margin_bottom = 78.0
size_flags_horizontal = 9
size_flags_stretch_ratio = 0.0

[node name="Label" type="Label" parent="Container/VBoxContainer/Sound"]
margin_top = 18.0
margin_right = 272.0
margin_bottom = 59.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "SOUND:"

[node name="ToggleButton" parent="Container/VBoxContainer/Sound" instance=ExtResource( 5 )]
margin_left = 276.0
margin_right = 626.0
margin_bottom = 78.0
rect_min_size = Vector2( 350, 0 )

[node name="Color" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 92.0
margin_right = 626.0
margin_bottom = 170.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Container/VBoxContainer/Color"]
margin_top = 18.0
margin_right = 272.0
margin_bottom = 59.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "COLOR:"

[node name="Button2" parent="Container/VBoxContainer/Color" instance=ExtResource( 5 )]
margin_left = 276.0
margin_right = 626.0
margin_bottom = 78.0
rect_min_size = Vector2( 350, 0 )

[node name="GuardSpeed" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 184.0
margin_right = 626.0
margin_bottom = 264.0
script = ExtResource( 6 )

[node name="Label" type="Label" parent="Container/VBoxContainer/GuardSpeed"]
margin_top = 19.0
margin_right = 272.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "GUARD SPEED:"

[node name="RangeControl" type="HBoxContainer" parent="Container/VBoxContainer/GuardSpeed"]
margin_left = 276.0
margin_right = 626.0
margin_bottom = 80.0
grow_horizontal = 0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 7 )

[node name="Left" type="Button" parent="Container/VBoxContainer/GuardSpeed/RangeControl"]
margin_right = 70.0
margin_bottom = 80.0
rect_min_size = Vector2( 70, 80 )
focus_mode = 0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
enabled_focus_mode = 0

[node name="left-btn-icon" type="TextureRect" parent="Container/VBoxContainer/GuardSpeed/RangeControl/Left"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -13.0
margin_right = 13.5
margin_bottom = 13.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left-btn-icon2" type="TextureRect" parent="Container/VBoxContainer/GuardSpeed/RangeControl/Left"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -13.0
margin_right = 13.5
margin_bottom = 13.0
texture = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="Container/VBoxContainer/GuardSpeed/RangeControl"]
margin_left = 70.0
margin_right = 280.0
margin_bottom = 80.0
size_flags_horizontal = 3
color = Color( 0.941176, 0.87451, 0.882353, 1 )

[node name="Label" type="Label" parent="Container/VBoxContainer/GuardSpeed/RangeControl/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -35.0
margin_right = 95.5
margin_bottom = 35.0
custom_colors/font_color = Color( 0.631373, 0.101961, 0.101961, 1 )
custom_fonts/font = ExtResource( 12 )
text = "1.0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="Container/VBoxContainer/GuardSpeed/RangeControl"]
margin_left = 280.0
margin_right = 350.0
margin_bottom = 80.0
rect_min_size = Vector2( 70, 0 )
focus_mode = 0
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 14 )
custom_styles/disabled = ExtResource( 13 )
custom_styles/normal = ExtResource( 13 )
enabled_focus_mode = 0

[node name="TextureRect" type="TextureRect" parent="Container/VBoxContainer/GuardSpeed/RangeControl/Right"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -13.0
margin_right = 13.5
margin_bottom = 13.0
texture = ExtResource( 15 )

[node name="TextureRect2" type="TextureRect" parent="Container/VBoxContainer/GuardSpeed/RangeControl/Right"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.5
margin_top = -13.0
margin_right = 13.5
margin_bottom = 13.0
texture = ExtResource( 16 )

[node name="SettingsActions" type="VBoxContainer" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = 85.0
margin_right = 325.0
margin_bottom = 371.0
custom_constants/separation = 20
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Confirm" parent="Container/SettingsActions" instance=ExtResource( 17 )]
margin_right = 640.0
margin_bottom = 78.0
theme = ExtResource( 23 )
text = "GO BACK"

[node name="Restart" parent="Container/SettingsActions" instance=ExtResource( 17 )]
margin_top = 98.0
margin_right = 640.0
margin_bottom = 176.0
theme = ExtResource( 23 )
text = "RESTART"

[node name="Quit" parent="Container/SettingsActions" instance=ExtResource( 17 )]
margin_top = 196.0
margin_right = 640.0
margin_bottom = 274.0
theme = ExtResource( 23 )
text = "QUIT"

[node name="GetHintButton" type="Button" parent="Container/SettingsActions"]
visible = false
margin_top = 294.0
margin_right = 640.0
margin_bottom = 376.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 19 )
custom_styles/normal = ExtResource( 2 )
text = "GET A HINT $"

[node name="GetFullSolutionButton" type="Button" parent="Container/SettingsActions"]
visible = false
margin_top = 396.0
margin_right = 640.0
margin_bottom = 478.0
custom_colors/font_color = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.717647, 0.141176, 0.141176, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 19 )
custom_styles/normal = ExtResource( 2 )
text = "GET THE FULL SOLUTION $"

[node name="GrayScaleShader" parent="Container" instance=ExtResource( 18 )]
visible = false

[node name="HintsLayer" parent="Container" instance=ExtResource( 21 )]

[node name="HintButtonsManager" parent="Container" instance=ExtResource( 22 )]
hint_button = NodePath("../SettingsActions/GetHintButton")
full_solution_button = NodePath("../SettingsActions/GetFullSolutionButton")
hints_layer = NodePath("../HintsLayer")

[connection signal="pressed" from="Container/VBoxContainer/Sound/ToggleButton" to="." method="_on_ToggleButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/Color/Button2" to="." method="_on_Button2_pressed"]
[connection signal="button_down" from="Container/VBoxContainer/GuardSpeed/RangeControl/Left" to="Container/VBoxContainer/GuardSpeed/RangeControl" method="_on_Left_button_down"]
[connection signal="button_up" from="Container/VBoxContainer/GuardSpeed/RangeControl/Left" to="Container/VBoxContainer/GuardSpeed/RangeControl" method="_on_Left_button_up"]
[connection signal="pressed" from="Container/VBoxContainer/GuardSpeed/RangeControl/Left" to="Container/VBoxContainer/GuardSpeed" method="_on_Left_pressed"]
[connection signal="button_down" from="Container/VBoxContainer/GuardSpeed/RangeControl/Right" to="Container/VBoxContainer/GuardSpeed/RangeControl" method="_on_Right_button_down"]
[connection signal="button_up" from="Container/VBoxContainer/GuardSpeed/RangeControl/Right" to="Container/VBoxContainer/GuardSpeed/RangeControl" method="_on_Right_button_up"]
[connection signal="pressed" from="Container/VBoxContainer/GuardSpeed/RangeControl/Right" to="Container/VBoxContainer/GuardSpeed" method="_on_Right_pressed"]
[connection signal="pressed" from="Container/SettingsActions/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Container/SettingsActions/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Container/SettingsActions/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Container/SettingsActions/GetHintButton" to="Container/HintButtonsManager" method="_on_GetHintButton_pressed"]
[connection signal="pressed" from="Container/SettingsActions/GetFullSolutionButton" to="Container/HintButtonsManager" method="_on_GetFullSolutionButton_pressed"]
